# WebEditor

./: .gitignore  .prettierrc  BACKEND_COMPLETE.md  BACKEND_PHASES_2_3_COMPLETE.md  BACKEND_PHASE_2_3_IMPLEMENTATION.md  BACKEND_SECTIONS_COMPLETE.md  CURRENT_STATUS.md  EXTRACTION_PRIORITY.md  EXTRACTION_PROGRESS.md  FINAL_STATUS.md  MODULARIZATION_PLAN.md  MODULARIZATION_STATUS.md  PHASE_2_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_4_COMPLETE.md  PHASE_4_FINAL_SUMMARY.md  PHASE_4_IMPLEMENTATION_GUIDE.md  PHASE_4_QUICK_START.md  PHASE_4_README.md  PHASE_4_USER_GUIDE.md  PROJECT.md  README.md  SHAPE_HANDLES_ANALYSIS.md  SHAPE_HANDLES_OPTIMIZATION_COMPLETE.md  Web-to-Print_Editor_User_Developer_Guide.docx  amb.md.txt  backend.md  docker-compose.yml  health-dashboard.html  newRequirements.docx  newRequirements.md  newRequirements_updated.docx  package-lock.json  package.json  process.md  requirements.txt  turbo.json
apps/backend/: COLOR_MANAGEMENT_README.md  Dockerfile  README.md  env.example  manage.py  package-lock.json  package.json  pyproject.toml  test_api.py  test_websocket.py
apps/backend/app/: __init__.py  asgi.py  celery.py  settings.py  settings_sqlite.py  urls.py  wsgi.py
apps/backend/app/analytics/: apps.py  urls.py  views.py
apps/backend/app/collaboration/: apps.py  consumers.py  models.py  permissions.py  routing.py  serializers.py  services.py  urls.py  views.py
apps/backend/app/colors/: apps.py  conversion.py  pantone_service.py  services.py  urls.py  validation.py  views.py
apps/backend/app/design_templates/: apps.py  models.py  serializers.py  urls.py  views.py
apps/backend/app/designs/: apps.py  models.py  serializers.py  services.py  urls.py  views.py
apps/backend/app/exports/: models.py  serializers.py  urls.py  views.py
apps/backend/app/health/: apps.py  routing.py  urls.py  views.py  views_simple.py
apps/backend/app/layers/: apps.py  (+4 more)
apps/backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/backend/scripts/: create-bucket.sh
apps/backend/src/: server.ts
(+260 files in other folders)
